<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.ishow.common.widget.TopBar
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:text="@string/forgot_password_title" />

    <com.ishow.common.widget.edittext.EditTextPro
        android:id="@+id/phone"
        style="@style/EditTextPro.Account.ForgotPassword"
        android:inputType="phone"
        app:inputHint="@string/register_hint_phone"
        app:leftText="@string/register_tip_phone" />


    <com.ishow.common.widget.edittext.EditTextPro
        android:id="@+id/verifyCode"
        style="@style/EditTextPro.Account.Register"
        app:customizeViewId="@id/sendVerifyCode"
        app:inputHint="@string/register_hint_verify_code"
        app:leftText="@string/register_tip_verify_code">

        <com.ishow.common.widget.VerifyCodeButton
            android:id="@+id/sendVerifyCode"
            style="@style/VerifyCodeButton" />

    </com.ishow.common.widget.edittext.EditTextPro>

    <com.ishow.common.widget.edittext.EditTextPro
        android:id="@+id/password"
        style="@style/EditTextPro.Account.Register"
        app:inputHint="@string/register_hint_password"
        app:inputType="textPassword"
        app:leftText="@string/forgot_password_tip_password" />

    <com.ishow.common.widget.edittext.EditTextPro
        android:id="@+id/ensurePassword"
        style="@style/EditTextPro.Account.Register"
        app:inputHint="@string/register_hint_ensure_password"
        app:inputType="textPassword"
        app:leftText="@string/register_tip_ensure_password" />

    <Button
        android:id="@+id/submit"
        style="@style/AppButton.Submit"
        android:text="@string/reset" />
</LinearLayout>