<?xml version="1.0" encoding="utf-8"?>
<com.ishow.common.widget.watermark.WaterMarkLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".modules.main.MainActivity">

    <com.ishow.common.widget.TopBar
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <FrameLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <com.ishow.common.widget.BottomBar
        android:id="@+id/bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_bar_height"
        android:background="@drawable/top_line_white_normal_bg"
        android:paddingTop="@dimen/dp_1">

        <com.ishow.common.widget.ImageTextView
            android:id="@+id/tab_1"
            style="@style/ImageTextView.BottomBar"
            app:image="@drawable/footer_tab_1"
            app:text="@string/tab_1"
            app:tint="@color/bottom_bar_tint" />

        <com.ishow.common.widget.ImageTextView
            android:id="@+id/tab_2"
            style="@style/ImageTextView.BottomBar"
            app:image="@drawable/footer_tab_2"
            app:text="@string/tab_2"
            app:tint="@color/bottom_bar_tint" />

        <com.ishow.common.widget.ImageTextView
            android:id="@+id/tab_3"
            style="@style/ImageTextView.BottomBar"
            app:image="@drawable/footer_tab_3"
            app:text="@string/tab_3"
            app:tint="@color/bottom_bar_tint" />

        <com.ishow.common.widget.ImageTextView
            android:id="@+id/tab_4"
            style="@style/ImageTextView.BottomBar"
            app:image="@drawable/footer_tab_4"
            app:text="@string/tab_4"
            app:tint="@color/bottom_bar_tint" />

    </com.ishow.common.widget.BottomBar>
</com.ishow.common.widget.watermark.WaterMarkLinearLayout>
